--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "genetix",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A simple lib to test genetic algorithms",
   "main": "index.js",
   "directories": {
@@ -8,7 +8,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,9 @@
   "bugs": {
     "url": "https://github.com/jsmrcaga/genetics/issues"
   },
-  "homepage": "https://github.com/jsmrcaga/genetics#readme"
+  "homepage": "https://github.com/jsmrcaga/genetics#readme",
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0"
+  }
 }
